--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             style="display:none;visibility:hidden"></iframe></noscript>
    
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1 " id="mainNav">
-        <a class="navbar-brand font-weight-light js-scroll-trigger" href="#page-top">Flattening the Curve |
+        <a class="navbar-brand font-weight-light js-scroll-trigger" href="#page-top">Statistics of the spreading of 
             COVID-19</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
             aria-label="Toggle navigation">
