--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
     <script src="assets/js/app.js"></script>
   
     <script src="assets/js/script.js"></script>
+    <footer id="right"><small>© Copyright: Kouhou Salma </small></footer>
    
 <script src="/__/firebase/7.13.2/firebase-app.js"></script>
 
