--- a/index.html
+++ b/index.html
@@ -180,7 +180,35 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-analytics.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
 
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyArsZT6la12dxI9VBIpVcPjYXiG5uBqK4A",
+    authDomain: "covid19-salmakouhou.firebaseapp.com",
+    databaseURL: "https://covid19-salmakouhou.firebaseio.com",
+    projectId: "covid19-salmakouhou",
+    storageBucket: "covid19-salmakouhou.appspot.com",
+    messagingSenderId: "339630467989",
+    appId: "1:339630467989:web:2e342709f790a0dc8ea49c",
+    measurementId: "G-FHLKN1FCL6"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+    const firebaseConfig = {
+  apiKey: "AIzaSyArsZT6la12dxI9VBIpVcPjYXiG5uBqK4A",
+  authDomain: "covid19-salmakouhou.firebaseapp.com",
+  databaseURL: "https://covid19-salmakouhou.firebaseio.com",
+  projectId: "covid19-salmakouhou",
+  storageBucket: "covid19-salmakouhou.appspot.com",
+  messagingSenderId: "339630467989",
+  appId: "1:339630467989:web:2e342709f790a0dc8ea49c",
+  measurementId: "G-FHLKN1FCL6"
+};
+</script>
 
 </body>
 
