--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link href="assets/css/style.css" rel="stylesheet" />
     <!-- Chart JS  -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"></script>
     
     <!-- The core Firebase JS SDK is always required and must be listed first -->
