--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        
+      <script src="/__/firebase/7.14.6/firebase-app.js"></script>    
        
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
